# promptbook_app

./: .gitignore  README.md  TEST_REPORT.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: cargo-shim.mjs  tauri-shim.mjs  vitest-shim.mjs
apps/desktop/src/: App.test.ts  App.tsx  smoke.test.ts  styles.css  ui-model.test.ts  ui-model.ts
apps/desktop/src-tauri/: .editorconfig  .gitignore  Cargo.toml  README.md  agent-models.json  tauri.conf.json
apps/desktop/src-tauri/.github/workflows/: ci.yml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/docs/: architecture.md  promptbook-format.md
apps/desktop/src-tauri/src/: agent_adapter.rs  ipc.rs  lib.rs  main.rs  process_exec.rs  run_manager.rs
docs/: architecture.md  promptbook-format.md  qa-checklist.md
promptbooks/: HELLO.txt  build-promptbook-runner.v1.yaml  design-improvements-v1.yaml  fix-and-enhance-v1.yaml  hello-world.v1.yaml  ui-polish-v1.yaml  ux-round3-v1.yaml  ux-round4-v1.yaml
sample-promptbooks/: hello-world.v1.yaml  repo-audit.v1.yaml
scripts/: eslint-shim.mjs  pb-run.mjs  run-fix-enhance.sh  run-promptbook.sh
