[package]
name = "promptbook-runner"
version = "0.1.0"
description = "Promptbook Runner desktop shell"
authors = ["you"]
edition = "2021"

[lib]
name = "promptbook_runner_lib"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
